[project]
name = "phaseshifts"
version = "0.1.9"
description = "Python-based version of the Barbieri/Van Hove phase shift calculation package for LEED/XPD modelling"
authors = [{ name = "Liam Deacon", email = "liam.m.deacon@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*"
dependencies = [
    "numpy>=1.3",
    "scipy>=0.7",
    "periodictable",
    "typing_extensions",
]
keywords = ["phaseshifts", "atomic scattering", "muffin-tin", "diffraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.scripts]
phaseshifts = "phaseshifts.cli:main"

[project.optional-dependencies]
atorb = ["mendeleev", "elementy", "pydantic; python_version >= '3.9'"]
gui = [
    "six",
    "qtpy",
    "pyqt5; python_version < '3.7'",
    "pyside6; python_version >= '3.7'",
    "pyqtgraph",
]
dev = [
    "black",
    "isort",
    "numpy",
    "pre-commit",
    "ruff",
    "scikit-build-core; python_version > '3.11'",
    "wheel",
]
test = ["pytest", "pytest-cov"]
docs = ["sphinx>=7,<8", "sphinx_rtd_theme", "numpydoc", "ipykernel"]
input = ["pyyaml>=6.0", "jsonschema>=4.0"]
viperleed = ["viperleed>=0.14.1"]

[build-system]
requires = [
    "setuptools",
    "wheel",
    "numpy",
    "ninja>=1.11",
    "scikit-build-core>=0.11.5; python_version >= '3.8'",
]
build-backend = "phaseshifts_build_backend"
backend-path = ["."]

[tool.cibuildwheel]
before-build = [
    "python -c \"from __future__ import print_function;\nimport sys, os;\nif sys.version_info < (3, 8):\n    print('Removing pyproject.toml for legacy build...');\n    os.remove('pyproject.toml');\n    print('Removed pyproject.toml');\"",
    "pip install 'pip<21; python_version <= \"3.8\"' 'pip; python_version > \"3.9\"'",
    "pip install 'setuptools<63; python_version <= \"3.8\"' 'setuptools; python_version > \"3.9\"'",
    "pip install 'wheel<0.35; python_version <= \"3.8\"' 'wheel; python_version > \"3.9\"'",
    "pip install 'delvewheel; sys_platform == \"win32\" and python_version >= \"3.6\"'",
    "python -c \"from __future__ import print_function;\nimport sys, subprocess;\nif sys.platform == 'win32':\n    print('Installing mingw...')\n    try:\n        print(subprocess.check_output('choco install -y mingw'), stderr=subprocess.STDOUT, shell=True);\n    except subprocess.CalledProcessError as e:\n        print('Failed to install mingw:', e.output)\"",
    "pip install 'numpy>=1.16.6'",
    "pip install 'scikit-build-core>=0.11.5; python_version >= \"3.8\"'",
]
build = [
    # NOTE: Python 3.9 is the minimum supported version for cibuildwheel v2
    "cp38-*",
    "cp39-*",
    "cp310-*",
    "cp311-*",
    "cp312-*",
    "cp313-*",
]
test-command = "python -c 'import phaseshifts.lib.libphsh as phsh'"
test-extras = ["test"]
test-requires = ["pytest"]

[tool.cibuildwheel.macos]
archs = "arm64"
skip = [
    # NOTE: Python <3.8 is not supported on macOS arm64 (m1 CPU architecture)
    "cp36-*arm64",
    "cp37-*arm64",
]

[tool.cibuildwheel.macos.environment]
CFLAGS = "-std=c99 -fno-strict-aliasing"
CC = "clang"
FC = "gfortran"
CXX = "clang++"
CMAKE_OSX_ARCHITECTURES = "$CIBW_ARCH"  # Universal2 build
MACOSX_DEPLOYMENT_TARGET = "11.0"       # Minimum supported macOS version for CIBW

[tool.cibuildwheel.windows]
archs = "auto64 auto32"  # Use both 64-bit and 32-bit architectures, typically x86 based on windows-latest runners
before-build = [
    "pip install numpy scikit-build-core cmake ninja meson meson-python",
]
repair-wheel-command = [
    # NOTE: delvewheel cannot mangle the libraries, stripping does not work
    # "delvewheel show {wheel} -vv",
    "delvewheel repair -vv -w {dest_dir} {wheel}",
]

[tool.cibuildwheel.windows.environment]
# Only support fortran via GCC toolchain, so make explicit
CC = "gcc"
CXX = "g++"
FC = "gfortran"
CMAKE_GENERATOR = "MinGW Makefiles"  # Use MinGW Makefiles for CMake
DISTUTILS_USE_SDK = "1"  # Use the SDK for building on Windows
SETUPTOOLS_USE_DISTUTILS = "stdlib"  # Use distutils for building on Windows

[tool.flake8]
max-line-length = 120
# Note: flake8 primarily reads from .flake8 file, not pyproject.toml
extend-ignore = ["E203", "E501", "W503"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
follow_imports = "skip"
show_column_numbers = true
exclude = [
    # GUI has optional dependencies (qtpy, wx, six)
    "phaseshifts/gui/",
    # Legacy Python 2/3 compat code with many type issues
    "phaseshifts/lib/hartfock.py",
    "phaseshifts/lib/phsh.py",
    "phaseshifts/lib/scripts/",
    # Validation uses optional pydantic dependency
    "phaseshifts/validation/",
]

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"
include = ["phaseshifts"]
exclude = [
    "phaseshifts/gui/**",          # GUI code has optional dependencies (qtpy, wx)
    "phaseshifts/lib/hartfock.py", # Legacy Python 2 code with many type issues
    "phaseshifts/lib/phsh.py",     # Legacy Python 2 code with many type issues
    "phaseshifts/lib/scripts/**",  # Legacy scripts with type issues
    "phaseshifts/validation/**",   # Pydantic validation with complex types
]
# Ignore missing imports for optional dependencies
reportMissingImports = "warning"
reportMissingTypeStubs = false
# Allow some flexibility for legacy code
reportAttributeAccessIssue = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
reportOptionalIterable = "warning"
reportPossiblyUnboundVariable = "warning"
reportArgumentType = "warning"
# Additional settings to reduce noise on legacy code
reportUndefinedVariable = "warning"
reportCallIssue = "warning"
reportOperatorIssue = "warning"
reportInvalidTypeForm = "warning"
reportAssignmentType = "warning"

[tool.pylint]
disable = "C0114, C0115, C0116"
max-line-length = 120

[tool.ruff]
target-version = "py38" # 3.8 is minimum
line-length = 120

[tool.scikit-build]
# scikit-build-core prefers Ninja automatically when available; Windows builds
# also set CMAKE_GENERATOR=Ninja in cibuildwheel env to avoid MSVC+gfortran issues.
cmake.build-type = "Release"
cmake.args = []
wheel.install-dir = "phaseshifts/lib"
build.targets = ["libphsh"]
# Only install CMake Runtime components (the compiled extension)
install.components = ["Runtime"]
# Completely disable automatic data file discovery and MANIFEST.in processing
experimental = true
wheel.packages = ["phaseshifts"]
# Override source discovery to ignore MANIFEST.in
build-dir = "build/{wheel_tag}"
# Exclude ALL non-essential files from wheels
wheel.exclude = [
    "*.txt",
    "*.md",
    "*.rst",
    "*.yaml",
    "*.yml",
    "*.png",
    "*.pdf",
    "docs/**",
    "htmlcov/**",
    "test/**",
    "tests/**",
    "dockerfiles/**",
    "*.ipynb",
    "*.json",
    "*.xml",
    "*.bat",
    "*.sh",
    "MANIFEST.in",
    "*.cfg",
    "Makefile",
    "CMakeLists.txt",
    "setup.py",
    "setup.cfg",
    "ChangeLog",
    "LICENSE.txt",
    "TODO.rst",
    "requirements*.txt",
    "*.lock",
]
sdist.exclude = [
    "htmlcov/**",
    "*.png",
    "*.pdf",
    "docs/_build/**",
    "test/**/__pycache__/**",
    "tests/**/__pycache__/**",
]

[tool.phaseshifts.wheel_check]
script = "python phaseshifts/tools/post_cibuildwheel_check.py"
description = """
After building wheels (e.g. with 'make wheel' or 'make build'), run the wheel check script to verify binary wheels contain the Fortran extension and are importable.
This is the default check for all modern builds. Legacy wheel checks are handled separately in the Makefile and CI.
"""
